--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,10 @@
             "email": "ritvars.zvejnieks@applyit.lv"
         }
     ],
+    "license": "MIT",
     "require": {
         "perftools/php-profiler": "^1.1",
-        "laravel/framework": ">=7.0",
+        "laravel/framework": "^7.0 || ^8.0 || ^9.0 || ^10.0",
         "php": ">=7.2.5"
     },
     "autoload": {
